# AMUNGUS

./: .gitignore  compile.sh
backend/: CMakeLists.txt  compile.sh  main.cpp
backend/controller/: http.cpp  ws.cpp
backend/www/: index.html  main.js  test.html
backend/www/assets/: uikit.css
frontend/: CMakeLists.txt  compile.sh  main.cpp
frontend/assets/html/gameui/: crewmate.html  menu.html
frontend/assets/html/menu/: credit.html  findRoom.html  howtoplay.html  soon.html
frontend/assets/html/minigame/: admin.html  camera.html  circle.html  clasification.html  download.html  gasoline.html  generic.html  navigation.html  number.html  password.html  reactor.html  scan.html  shield.html  signal.html  simon.html  switch.html  temperature.html  vent.html  wiring.html
frontend/assets/html/modal/: create_room.html  quick_room.html  region_room.html  search_room.html
frontend/assets/json/: country.json  skeld.json
frontend/assets/minigame/: admin.html  camera.html  circle.html  clasification.html  download.html  gasoline.html  generic.html  navigation.html  number.html  password.html  reactor.html  shield.html  signal.html  simon.html  switch.html  temperature.html  wiring.html
frontend/assets/object/: camera.json  collision.json  light.json  sabotage.json  task.json  vent.json
frontend/assets/ui/: crewmate.html
frontend/controller/: contrl.cpp  minigame.cpp  player.cpp  skeld.cpp  task.cpp  world.cpp
frontend/controller/control/: menu.cpp  modal.cpp  wrtc.cpp  ws.cpp
frontend/controller/game/: minigame.cpp  player.cpp  skeld.cpp  task.cpp  utils.cpp  world.cpp
frontend/controller/scene/: game.cpp  main.cpp  menu.cpp
